2000-04-17  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* validate.h (SCM_VALIDATE_INUM_RANGE_COPY,
	SCM_VALIDATE_NUMBER_COPY): New macros.

2000-04-16  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* script.c (scm_compile_shell_switches): Added --debug option.

2000-04-16  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* vectors.c (scm_vector_set_x): Return SCM_UNSPECIFIED (as
	specified by R5RS).

2000-04-15  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* ports.h (SCM_INPUT_PORT_P, SCM_OUTPUT_PORT_P): New macros.
	(SCM_INPORTP, SCM_OUTPORTP): Marked as deprecated.

	* validate.h (SCM_VALIDATE_INPUT_PORT, SCM_VALIDATE_OUTPUT_PORT):
	New macros.
	Cleanup of code layout.

	* ports.c, ports.h (close-input-port, close-output-port): New R5RS
	procedures.

2000-04-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* continuations.c (scm_make_cont, scm_dynthrow):  Completely
	separated implementations for defined (CHEAP_CONTINUATIONS) and
	!defined (CHEAP_CONTINUATIONS).  Also, now using memcpy for stack
	copying.

	* continuations.c (grow_stack):  Renamed from grow_throw.

	* continuations.c (copy_stack_and_call):  New static function.

	* continuations.c (scm_dynthrow):  Simplified and made static.

	* continuations.h (scm_dynthrow):  Made static.

2000-04-13  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* unif.c, unif.h (shared-array-root, shared-array-offset,
	shared-array-increments): New primitives.

2000-04-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_gc_sweep):  Simplify the computation of freed memory
	size for msymbols.

	* symbols.h (SCM_SLOTS, SCM_SYMBOL_FUNC, SCM_SYMBOL_PROPS,
	SCM_SYMBOL_HASH):  The msymbol slots are now a field of scm_bits_t
	values.

	* symbols.h (SCM_SET_SYMBOL_FUNC, SCM_SET_SYMBOL_PROPS):  New
	macros.

	symbols.c (scm_intern_obarray_soft, msymbolize, scm_symbol_fset_x,
	scm_symbol_pset_x):  Use them.

	* symbols.c (scm_symbol_hash):  Unpack to access SCM raw data. 

2000-04-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>
